Backport to Java 17